--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,58 @@
 .book-card button:hover {
   background-color: #0056b3;
 }
+
+#cart {
+  text-align: right;
+  font-size: 20px;
+  position: relative;
+}
+
+#cart-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  position: relative;
+}
+
+#cart-button i {
+  font-size: 24px;
+  color: #333;
+}
+
+#cart-count {
+  background-color: red;
+  border-radius: 50%;
+  padding: 5px 10px;
+  font-size: 14px;
+  color: white;
+  font-weight: bold;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+}
+
+#cartmodal {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 130px;
+  width: 300px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  padding: 20px;
+}
+
+#cart-list {
+  list-style: none;
+  padding: 0;
+}
+
+#cart-list li {
+  display: flex;
+  justify-content: space-between;
+  }
